[package]
name = "remote-manager"
version = "2.0.0"
edition = "2021"

[dependencies]
base64 = "0.21"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
aes-gcm = "0.10"
generic-array = "0.14"
hex = "0.4"
libc = "0.2"
rand_core = { version = "0.6", features = ["std"] }
getrandom = { version = "0.2", features = ["std"] }
